--- a/_config.yml
+++ b/_config.yml
@@ -36,8 +36,8 @@ algolia:
   powered_by: # true (default), false
 
 # Build settings
-markdown: kramdown
-theme: jekyll-theme-basically-basic
+markdown: GFM
+remote_theme: "mmistakes/jekyll-theme-basically-basic@1.4.5"
 plugins: # previsously gems
   - jekyll-feed
   - jekyll-seo-tag
